--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:padding="@dimen/tv_pudding"
+            android:padding="@dimen/tv_padding"
             android:text="@string/lbl_forgot_password"
             android:textColor="@color/colorPrimary"
             android:textSize="20dp" />
