--- a/app/src/main/res/layout/away_team_player_row.xml
+++ b/app/src/main/res/layout/away_team_player_row.xml
@@ -2,49 +2,49 @@
     android:layout_width="match_parent"
     android:layout_height="88dp"
     android:orientation="horizontal"
-    android:paddingBottom="10dp"
+    android:paddingBottom="@dimen/away_team_ly_padding_b"
     android:paddingLeft="@dimen/margin_16dp"
     android:paddingRight="@dimen/margin_16dp"
-    android:paddingTop="10dp">
+    android:paddingTop="@dimen/away_team_ly_padding_t">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/iv_player_image"
+        android:layout_width="@dimen/player_image_w"
+        android:layout_height="@dimen/player_image_h"
         android:layout_centerVertical="true"
         android:tint="@color/status_bar"
         android:src="@drawable/ic_account_circle_black_36dp" />
 
     <TextView
-        android:id="@+id/textView7Name"
+        android:id="@+id/tv_player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="72dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/tv_player_name_margin_l"
+        android:layout_marginTop="@dimen/tv_player_name_margin_t"
         android:fontFamily="sans-serif"
         android:textColor="#000"
         android:textSize="16sp" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linear_layout_player_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView7Name">
+        android:layout_below="@+id/tv_player_name">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textYear"
+                android:id="@+id/player_hint_year_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
+                android:layout_marginLeft="@dimen/tv_year_margin_l"
                 android:text="@string/birthday"
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/textViewNumber"
+                android:id="@+id/player_number_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -53,52 +53,51 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/textViewYear"
+                android:id="@+id/player_year_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/textYear"
-                android:layout_toRightOf="@+id/textYear"
+                android:layout_toEndOf="@+id/player_hint_year_tv"
+                android:layout_toRightOf="@+id/player_hint_year_tv"
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/nationality_lan_lay"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@id/linearLayout"
-        android:layout_marginLeft="72dp">
+        android:layout_below="@id/linear_layout_player_data"
+        android:layout_marginLeft="@dimen/lin_margin_l">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textNationality"
+                android:id="@+id/player_nationality_hint_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nationality"
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/textViewNationality"
+                android:id="@+id/player_nationality_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/textNationality"
-                android:layout_toRightOf="@+id/textNationality"
+                android:layout_toEndOf="@+id/player_nationality_hint_tv"
+                android:layout_toRightOf="@+id/player_nationality_hint_tv"
                 android:maxLength="11"
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/textViewPosition"
+                android:id="@+id/player_position_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:maxLength="11"
                 android:textSize="14sp" />
-
 
         </RelativeLayout>
     </LinearLayout>
