--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -77,7 +77,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textViewDate"
+                    android:id="@+id/match_date_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
