--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -11,10 +11,10 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginBottom="@dimen/cv_margin_b"
+            android:layout_marginLeft="@dimen/cv_margin_l"
+            android:layout_marginRight="@dimen/cv_margin_r"
+            android:layout_marginTop="@dimen/cv_margin_t">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -24,14 +24,13 @@
                 android:orientation="vertical">
 
                 <RelativeLayout
-                    android:id="@+id/match"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
                     android:padding="@dimen/margin_16dp">
 
                     <ImageView
-                        android:id="@+id/firstteam"
+                        android:id="@+id/first_team_logo_iv"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_alignParentLeft="true"
@@ -39,7 +38,7 @@
                         android:layout_alignParentTop="true" />
 
                     <ImageView
-                        android:id="@+id/secondteam"
+                        android:id="@+id/second_team_logo_iv"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_alignParentEnd="true"
@@ -47,36 +46,36 @@
                         android:layout_alignParentTop="true" />
 
                     <TextView
-                        android:id="@+id/homeTeam"
+                        android:id="@+id/home_team_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/awayTeam"
-                        android:layout_alignBottom="@+id/awayTeam"
-                        android:layout_toEndOf="@+id/firstteam"
-                        android:layout_toRightOf="@+id/firstteam"
+                        android:layout_alignBaseline="@+id/away_team_name_tv"
+                        android:layout_alignBottom="@+id/away_team_name_tv"
+                        android:layout_toEndOf="@+id/first_team_logo_iv"
+                        android:layout_toRightOf="@+id/first_team_logo_iv"
                         android:maxLength="8"
                         android:paddingLeft="5dp"
                         android:textColor="@color/dark"
                         android:textSize="@dimen/material_text_subhead" />
 
                     <TextView
-                        android:id="@+id/awayTeam"
+                        android:id="@+id/away_team_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/secondteam"
+                        android:layout_alignBottom="@+id/second_team_logo_iv"
                         android:layout_marginBottom="14dp"
-                        android:layout_toLeftOf="@+id/secondteam"
-                        android:layout_toStartOf="@+id/secondteam"
+                        android:layout_toLeftOf="@+id/second_team_logo_iv"
+                        android:layout_toStartOf="@+id/second_team_logo_iv"
                         android:maxLength="8"
                         android:paddingRight="5dp"
                         android:textColor="@color/dark"
                         android:textSize="@dimen/material_text_subhead" />
 
                     <TextView
-                        android:id="@+id/textViewScore"
+                        android:id="@+id/score_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/homeTeam"
+                        android:layout_alignTop="@+id/home_team_name_tv"
                         android:layout_centerHorizontal="true"
                         android:maxLength="10"
                         android:text=" - "
@@ -86,7 +85,7 @@
 
 
                 <RelativeLayout
-                    android:id="@+id/matchdescription"
+                    android:id="@+id/match_description_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
@@ -95,7 +94,7 @@
                     android:paddingRight="@dimen/margin_16dp">
 
                     <TextView
-                        android:id="@+id/goalsAwayTeam"
+                        android:id="@+id/match_time_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
@@ -104,7 +103,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textViewStatus"
+                        android:id="@+id/match_status_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -114,7 +113,7 @@
                         android:textSize="@dimen/material_text_button" />
 
                     <TextView
-                        android:id="@+id/textViewDate"
+                        android:id="@+id/match_date_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
