--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="snackbar_ok">#26ae90</color>
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
-    <color name="btn_logut_bg">#ff6861</color>
+    <color name="btn_log_out_bg">#ff6861</color>
     <color name="mat_press">#1565C0</color>
     <color name="mat_normal">#1976d2</color>
     <color name="snackbar">#FF715B</color>
