--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,7 +41,31 @@
     <dimen name="pb_margin_b">20dp</dimen>
     <dimen name="layout_margin_top">30dp</dimen>
     <dimen name="layout_margin_bottom">30dp</dimen>
-    <dimen name="tv_pudding">10dp</dimen>
+    <dimen name="tv_padding">10dp</dimen>
     <dimen name="pb_width">30dp</dimen>
     <dimen name="pb_height">30dp</dimen>
+    <dimen name="profile_image_w">45dp</dimen>
+    <dimen name="profile_image_h">45dp</dimen>
+    <dimen name="tv_user_position_margin_top">8dp</dimen>
+    <dimen name="tv_user_position_margin_r">64dp</dimen>
+    <dimen name="rate_name_margin_left">72dp</dimen>
+    <dimen name="rate_name_margin_top">10dp</dimen>
+    <dimen name="tv_user_points_pad_top">5dp</dimen>
+    <dimen name="tv_hint_padding_top">5dp</dimen>
+    <dimen name="away_team_ly_padding_b">10dp</dimen>
+    <dimen name="away_team_ly_padding_t">10dp</dimen>
+    <dimen name="player_image_w">50dp</dimen>
+    <dimen name="player_image_h">50dp</dimen>
+    <dimen name="tv_player_name_margin_l">72dp</dimen>
+    <dimen name="tv_player_name_margin_t">8dp</dimen>
+    <dimen name="tv_year_margin_l">72dp</dimen>
+    <dimen name="lin_margin_l">72dp</dimen>
+    <dimen name="league_list_ly_padding_b">15dp</dimen>
+    <dimen name="league_list_ly_padding_l">16dp</dimen>
+    <dimen name="league_list_ly_padding_r">16dp</dimen>
+    <dimen name="league_list_ly_padding_t">15dp</dimen>
+    <dimen name="cv_margin_l">10dp</dimen>
+    <dimen name="cv_margin_t">5dp</dimen>
+    <dimen name="cv_margin_r">10dp</dimen>
+    <dimen name="cv_margin_b">5dp</dimen>
 </resources>
