last but not list

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -50,7 +50,7 @@
             android:theme="@style/TextLabel">
 
             <EditText
-                android:id="@+id/et_email"
+                android:id="@+id/email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
