--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,8 @@
     tools:context=".activity.loginActivity.LoginActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
@@ -30,7 +30,7 @@
             android:theme="@style/TextLabel">
 
             <EditText
-                android:id="@+id/et_email"
+                android:id="@+id/email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
@@ -45,7 +45,7 @@
             android:theme="@style/TextLabel">
 
             <EditText
-                android:id="@+id/et_password"
+                android:id="@+id/password_et"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
@@ -55,7 +55,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/login_btn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/btn_margin_top"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btn_reset_password"
+                android:id="@+id/reset_password_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -81,7 +81,7 @@
             <!-- Link to Login Screen -->
 
             <Button
-                android:id="@+id/btn_sign_up"
+                android:id="@+id/sign_up_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -106,7 +106,7 @@
                 android:textColor="@color/colorPrimary" />
 
             <com.facebook.login.widget.LoginButton
-                android:id="@+id/btn_facebook_login"
+                android:id="@+id/facebook_login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/facebook_button_ml"
