--- a/app/src/main/res/layout/fragment_away_team.xml
+++ b/app/src/main/res/layout/fragment_away_team.xml
@@ -5,7 +5,7 @@
     tools:context=".fragments.awayTeamFragment.AwayTeamFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_away_team_players"
+        android:id="@+id/away_team_players_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
@@ -17,7 +17,7 @@
         android:text="@string/sorry_the_api_developer_is_fool"
         android:textColor="#628f3e"
         android:textSize="15sp"
-        android:id="@+id/textViewAwayMsg"
+        android:id="@+id/msg_tv"
         android:layout_gravity="center" />
 
 </FrameLayout>
