--- a/app/src/main/res/layout/fragment_user_rate.xml
+++ b/app/src/main/res/layout/fragment_user_rate.xml
@@ -1,47 +1,44 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/refreshUserRate"
+    android:id="@+id/user_rate_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fabLayout"
+        android:id="@+id/user_rate_coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".fragments.currentUserRateFragment.CurrentUserRateFragment">
+        tools:context=".fragments.userRateFragment.UserRateFragment">
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_user_rate"
+            android:id="@+id/user_rate_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
             android:scrollbars="vertical"
-            android:splitMotionEvents="true"/>
+            android:splitMotionEvents="true" />
 
         <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/progress_view_user_rate"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/user_rate_progress_view"
+            android:layout_width="@dimen/progress_view_w"
+            android:layout_height="@dimen/progress_view_h"
             android:layout_gravity="center"
             app:cpv_animAutostart="true"
             app:cpv_color="@color/colorPrimaryDark"
             app:cpv_indeterminate="true" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabHelp"
+            android:id="@+id/help_floating_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@android:drawable/ic_menu_help"
             android:background="@color/colorPrimary"
+            android:src="@android:drawable/ic_menu_help"
             app:backgroundTint="@color/colorPrimary" />
 
     </android.support.design.widget.CoordinatorLayout>
